# seedling

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
example/: example.py  experiment.py  main.py
example/example_yamls/: calendar.yaml  clock.yaml  food_info.yaml  food_recipes.yaml  map.yaml  messaging.yaml  music.yaml  news.yaml  reminders.yaml  shopping.yaml  smart_home.yaml  travel.yaml  weather.yaml
seedling/: __init__.py  language_model.py  predict.py  prep.py  reader.py
src/seedling/: __init__.py  language_model.py  predict.py  prep.py  reader.py
src/seedling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
